# musicmanV3

./: Cargo.toml
src/: main.rs  watcher_thread.rs
src/helpers/: index.rs  mod.rs  playlist.rs
src/services/: albumart.rs  clear.rs  enqueue.rs  mod.rs  next_prev.rs  pause.rs  playlist.rs  prev.rs  search.rs  seek.rs  status.rs
src/types/: mod.rs
src/types/response_types/: mod.rs  playlist.rs  song.rs
src/types/state_impl/: mod.rs  playback.rs  search.rs  source.rs
